--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,8 @@
     "express": "^4.18.1",
     "iconv-lite": "^0.6.3",
     "md5-node": "^1.0.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.16",
+    "path": "^0.12.7"
   }
 }
