--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
     "encoding": "^0.1.13",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-ws": "^5.0.2",
     "iconv-lite": "^0.6.3",
     "md5-node": "^1.0.1",
     "mysql": "^2.18.1",
