--- a/src/package.json
+++ b/src/package.json
@@ -5,8 +5,10 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
+    "fs": "^0.0.1-security",
     "iconv-lite": "^0.6.3",
     "md5-node": "^1.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.16",
     "path": "^0.12.7"
