--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "encoding": "^0.1.13",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
